Infestation scenario: level up with minimal complexity.

--- a/app/templates/configure/overall.html
+++ b/app/templates/configure/overall.html
@@ -255,7 +255,7 @@
                     'characterName': "{{ req.character.name }}",
                     'attribId': "{{ req.attrib.id }}",
                     'attribName': "{{ req.attrib.name }}",
-                    'attribValue': "{{ req.attrib.value | formatNum }}"
+                    'attribValue': "{{ req.attrib_value | formatNum }}"
                 });
             {% endfor %}
 
